
  * Repackaged to be DFSG-free, by dropping the upstream man pages.

  * Do not install the ivykis manual pages anymore.
  * Update and finalize the debian/copyright file.
  * Document the packaging workflow better in debian/README.source.
  * Use dpkg triggers to restart syslog-ng when appropriate.
  * Include DFSG-free manual pages for all binaries.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sat, 10 Sep 2011 19:22:30 +0200

syslog-ng (3.3.0beta2-1~preview3) unstable; urgency=low

  * Update to commit 0a3d844 from upstream.

  * Apply patch that fixes BSD timestamp parsing (also from upstream).
  * Upstream memory leak fixes.
  * Move the modules to a versioned subdirectory.
  * Ease future upgrades by making libsyslog-ng-3.3.0beta2 confict with
    and provide libsyslog-ng-3.3.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 04 Sep 2011 21:14:40 +0200

syslog-ng (3.3.0beta2-1~preview2) unstable; urgency=low

  * Update to commit 789f906 from upstream.

  * Ship the logcheck files as syslog-ng, not as syslog-ng-core.
  * Properly restart syslog-ng when upgrading from stable.
  * Rename libsyslog-ng3.3.0beta2-0 to libsyslog-ng-3.3.0beta2.
  * Ship the ivykis headers with libsyslog-ng-dev.
  * Compress both source and binaries with xz, instead of gzip.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sat, 27 Aug 2011 10:01:08 +0200

syslog-ng (3.3.0beta2-1~preview1) unstable; urgency=low

  * Update syslog-ng.conf to be fully 3.3 compliant.
  * Add support for GNU/kFreeBSD in the SCL system() generator.
  * Fixed the logrotate config file installation, so that upgrades from
    non-split syslog-ng becomes smooth. (This breaks upgrades from split
    ones, but that's ok)
  * Do restart syslog-ng properly upon upgrade from non-split version.
  * Simplified the logrotate file by merging identical entries.
  * Include local configuration files from /etc/syslog-ng/conf.d/ (Closes:
    #609050).
  * Split out libsyslog-ng (as libsyslog-ng0 for now).